fix bugs in xss module

--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -2,7 +2,7 @@
 extension = 
 subdomain = true
 do_web_scap = true
-target_file = configs/target_toolsforhumanity.txt
+target_file = configs/target_att.txt
 exclusion_file = configs/exclusion_pornbox.txt
 target_login = []
 logging=DEBUG
