--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@ potential*.txt
 __pycache__/
 nordvpn_login.csv
 nordvpn_login_token.csv
-bounty_drive/outputs/reports/*.csv
-bounty_drive/outputs/reports/*.zip
+bounty_drive/outputs/reports/*
 bounty_drive/outputs/html_google_todo/*.html
 pypy3-venv/*
 python3-venv/*
+.VSCodeCounter/*
+.mypy_cache/*-
+.mypy_cache
