--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -2,8 +2,8 @@
 extension = 
 subdomain = true
 do_web_scap = true
-target_file = configs/target_att.txt
-exclusion_file = configs/exclusion_pornbox.txt
+target_file = configs/targets/target_paypal.txt
+exclusion_file = configs/targets/exclusion_pornbox.txt
 target_login = []
 logging=DEBUG
 max_thread = 30
